code/tui/snapshots/fullscreen/modal/config_chinese_switch_off.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame
---
  .                                                                                       [仪 表 盘 ]  
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │         ┌── 配 置  ─────────────────────────────────────────────────────────────[✗]─┐          │  
  │    ▄  ▄ │                                                                         │          │  
  │  ▗█▛██▜█│   通 用     提 供 商     议 题     网 络                                         │          │  
  │  ▝▜████▛│                                                                         │          │  
  │    ▝  ▘ │  ╭────────────────────────────────────────────────────────────────────╮ │          │  
  │         │  │ 搜 索 配 置                                                            │ │          │  
  │         │  ╰────────────────────────────────────────────────────────────────────╯ │          │  
  │         │  Vim 模 式                                                         关 闭    │          │  
  │         │  显 示 使 用 技 巧                                                     开 启    │          │  
  │         │  内 存 诊 断                                                         关 闭  + │          │  
  │         │  自 动 更 新                                                         最 新    │          │  
  ╰─────────│  以 差 异 显 示  Git 更 改                                              关 闭  + │──────────╯  
            │  语 言                                                             中 文    │             
            │  状 态 栏 风 格                                                       简 洁  + │             
            │  按 键 提 示 风 格                                                     对 比    │             
            │  屏 幕 模 式                                                   fullscreen   │             
            │> 记 忆                                                             关 闭  + │             
            │  自 动 获 取  Git 更 新                                                关 闭  + │             
            │  Git 获 取 间 隔                                                     180s   │             
            │  顾 问                                                             关 闭    │             
            │  始 终 使 用 半 角 标 点 （ 仅 中 文 ）                                       关 闭  + │             
            │  2 项  下 方                                                               │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > 构 建 任 何 内 容                                                                                     
  ────────────────────────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                                    
  Enter 更 改  · r 重 置  · ←/→ 详 情  · Tab 标 签 页  · / 搜 索  · Esc 关 闭
