code/tui/snapshots/fullscreen/modal/config_double_click_changes_item.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                                    [Dashboard]  
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │         ┌── Config ───────────────────────────────────────────────────────────[✗]─┐          │  
  │    ▄  ▄ │                                                                         │          │  
  │  ▗█▛██▜█│   General    Providers    Issues    Network                             │          │  
  │  ▝▜████▛│                                                                         │          │  
  │    ▝  ▘ │  ╭────────────────────────────────────────────────────────────────────╮ │          │  
  │         │  │ Search configuration                                               │ │          │  
  │         │  ╰────────────────────────────────────────────────────────────────────╯ │          │  
  │         │  Vim mode                                                         off   │          │  
  │         │  Show tips                                                         on   │          │  
  │         │> Memory diagnostics                                                on + │          │  
  │         │  Automatic updates                                             Latest   │          │  
  ╰─────────│  Show Git changes as diff                                         off + │──────────╯  
            │  Language                                                     English   │             
            │  Status bar style                                              Simple + │             
            │  Key hint style                                              Contrast   │             
            │  Screen mode                                               fullscreen   │             
            │  Memories                                                         off + │             
            │  Automatic Git fetch                                              Off + │             
            │  Git fetch interval                                              180s   │             
            │  Advisor                                                          Off   │             
            │  Always use half-width punctuation (Chinese only)                 off + │             
            │  2 more below                                                           │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘───────────  
  > Build anything                                                                                  
  ─────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                    
  Enter change · r reset · ←/→ details · Tab tabs · / search · Esc close
