code/tui/snapshots/fullscreen/modal/config_page_hints_list_40_english.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: text
---
  ┌── Config ────────────────────[✗]─┐  
  │                                  │  
  │   General    Providers           │  
  │   Issues    Network              │  
  │                                  │  
  │  ╭─────────────────────────────╮ │  
  │  │ Search configuration        │ │  
  │  ╰─────────────────────────────╯ │  
  │> Vim mode                  off   │  
  └──────────────────────────────────┘  
  Enter change · r reset · Tab tabs ·   
  / search · Esc close
