code/tui/snapshots/fullscreen/modal/config_page_hints_list_80_chinese.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: text
---
  .                                                                   [仪 表 盘 ]  
                                                                                
        ┌── 配 置  ──────────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │   通 用     提 供 商     议 题     网 络                              │        
        │                                                              │        
        │  ╭─────────────────────────────────────────────────────────╮ │        
        │  │ 搜 索 配 置                                                 │ │        
        │  ╰─────────────────────────────────────────────────────────╯ │        
        │> Vim 模 式                                              关 闭    │        
        │  显 示 使 用 技 巧                                          开 启    │        
        │  内 存 诊 断                                              关 闭  + │        
        │  自 动 更 新                                              最 新    │        
        │  以 差 异 显 示  Git 更 改                                   关 闭  + │        
        │  语 言                                                  中 文    │        
        │  状 态 栏 风 格                                            简 洁    │        
        │  按 键 提 示 风 格                                          对 比    │        
        │  屏 幕 模 式                                        fullscreen   │        
        │  7 项  下 方                                                    │        
  ──────└──────────────────────────────────────────────────────────────┘──────  
  > keep this draft                                                             
  ────────────────────────────────────────────────────────────────── 自 动 模 型    
                                                                                
  Enter 更 改  · r 重 置  · Tab 标 签 页  · / 搜 索  · Esc 关 闭
