code/tui/snapshots/fullscreen/modal/config_page_hints_search_40_chinese.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: text
---
  ┌── 配 置  ──────────────────────[✗]─┐  
  │                                  │  
  │   通 用     提 供 商     议 题          │  
  │   网 络                            │  
  │                                  │  
  │  ╭─────────────────────────────╮ │  
  │  │ 搜 索 配 置                     │ │  
  │  ╰─────────────────────────────╯ │  
  │  Vim 模 式                  关 闭    │  
  └──────────────────────────────────┘  
  Enter/Esc/Ctrl+C 返 回   ·              
  Tab/Shift+Tab 切 换
