code/tui/snapshots/fullscreen/modal/config_page_hints_search_80_english.snap
---
source: code/tui/src/app/fullscreen/modal_tests.rs
expression: text
---
  .                                                                [Dashboard]  
                                                                                
        ┌── Config ────────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │   General    Providers    Issues    Network                  │        
        │                                                              │        
        │  ╭─────────────────────────────────────────────────────────╮ │        
        │  │ Search configuration                                    │ │        
        │  ╰─────────────────────────────────────────────────────────╯ │        
        │  Vim mode                                              off   │        
        │  Show tips                                              on   │        
        │  Memory diagnostics                                    off + │        
        │  Automatic updates                                  Latest   │        
        │  Show Git changes as diff                              off + │        
        │  Language                                          English   │        
        │  Status bar style                                   Simple   │        
        │  Key hint style                                   Contrast   │        
        │  Screen mode                                    fullscreen   │        
        │  8 more below                                                │        
  ──────└──────────────────────────────────────────────────────────────┘──────  
  > keep this draft                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  Enter/Esc/Ctrl+C to return  ·  Tab/Shift+Tab to switch
